# DOMP

./: .gitignore  README.md  README_cn.md  pyproject.toml
docs/: model_architecture.md  training_program_design.md
src/mjgpt_converter/: __init__.py  actions.py  agari.py  cli.py  converter.py  encoder.py  io.py  rules.py  state.py  tiles.py
src/mjgpt_training/: __init__.py  cli.py  collator.py  dataset.py  model.py  samples.py  tokenizer.py  train.py
tests/: test_converter.py  test_training_collator_model.py  test_training_dataset.py  test_training_samples.py  test_training_tokenizer.py  test_training_train.py
